<resources>
    <string name="app_name">Game Bola</string>
    <string name="btnGame">PLAY</string>
    <string name="btnExit">EXIT</string>
    <string name="btnHome">HOME</string>
    <string name="labelScore">SCORE : 0</string>
    <string name="labelTime">TIME : -</string>
    <string name="dialogTitle">GAME FINISH</string>
    <string name="dialogMessage">Your last score is  . Do you want to play again?</string>
    <string name="dialogBtnYES">YES</string>
    <string name="dialogBtnNO">NO</string>
    <string name="high_score">High Score</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="game">Game</string>
    <string name="navigation_open">Open</string>
    <string name="navigation_close">Close</string>
    <string name="textHighScore">HIGH SCORES</string>
    <string name="textRank">RANK</string>
    <string name="textScore">SCORES</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="difficulty">Difficulty : </string>
    <string name="jumlah_bola">Jumlah Bola :</string>
</resources>
