<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundColor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/showSkor"
        android:text="@string/textHighScore"
        android:textSize="30dp"
        android:padding="10dp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textRank"
        android:layout_below="@id/showSkor"
        android:textSize="20dp"
        android:padding="10dp"
        android:id="@+id/rank"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textScore"
        android:layout_below="@id/showSkor"
        android:layout_centerInParent="true"
        android:textSize="20dp"
        android:padding="10dp"
        android:id="@+id/rank"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listView"
        android:layout_below="@id/rank"/>
</RelativeLayout>